--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -4,12 +4,29 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="679dp"
+        android:layout_above="@+id/btnPost"
+        android:layout_marginBottom="3dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvPosts"
+            android:layout_width="match_parent"
+            android:layout_height="686dp"
+            android:layout_above="@+id/btnPost"
+            android:layout_marginBottom="5dp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <ImageButton
         android:id="@+id/btnPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="53dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="53dp"
         android:layout_marginBottom="8dp"
         android:layout_toStartOf="@+id/btnProfile"
@@ -38,4 +55,5 @@
         android:layout_marginBottom="8dp"
         android:background="@color/white"
         app:srcCompat="@drawable/instagram_home_outline_24" />
+
 </RelativeLayout>
