--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="350dp"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".Activities.LoginActivity">
     android:orientation="vertical"
 
     <ImageView
