--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -24,16 +24,17 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/tvRelativeDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="viewEnd" />
-
-    <TextView
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="3dp"
+        android:textAlignment="viewStart"
         android:textColor="#373333"
         tools:text="Caption" />
+
+    <TextView
+        android:id="@+id/tvRelativeDate"
+        android:layout_width="match_parent"
+        android:layout_height="29dp"
+        android:textAlignment="viewStart" />
 </LinearLayout>
