--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -6,33 +7,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="350dp"
+    android:layout_marginStart="0dp"
+    android:layout_marginTop="0dp"
+    android:layout_marginEnd="0dp"
+    android:layout_marginBottom="0dp"
+    android:background="@drawable/gradient_background"
     android:orientation="vertical"
     tools:context=".Activities.LoginActivity">
-    android:orientation="vertical"
+
 
     <ImageView
         android:id="@+id/ivAppIcon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_weight="1"
         tools:src="@tools:sample/avatars" />
 
     <EditText
         android:id="@+id/etUsername"
-        android:layout_width="match_parent"
+        android:layout_width="266dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
         android:layout_weight="1"
         android:ems="10"
         android:hint="username" />
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="match_parent"
-        android:layout_height="21dp"
+        android:layout_width="266dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
         android:layout_weight="1"
         android:ems="10"
         android:inputType="textPassword"
@@ -40,8 +45,9 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
+        android:layout_width="267dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
         android:layout_weight="1"
         android:text="Login"
         android:textColor="@color/white"
@@ -49,8 +55,10 @@
 
     <Button
         android:id="@+id/btnSignUp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="268dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginBottom="300dp"
         android:layout_weight="1"
         android:text="Sign Up"
         app:backgroundTint="@color/material_on_background_emphasis_high_type" />
